# CMakeStagingPOC

./: CMakeLists.txt  CMakePresets.json  CopyToStaging.cmake  Readme.md
App/: CMakeLists.txt
UnitTest/: CMakeLists.txt
